# compVisionModule

./: .gitignore  .gitmodules  CMakeLists.txt  MultiCameraCapture.py  README.md  build_aruco  calibrate.py  calibration.p  camera_capture.py  contour_utils.py  imagingSourceCamViewer.py  openCVInstallInstructions  planeFinder.py  plane_finder.py  point_utils.py  saver.py  stereocalibrate.py  viewer.py
aruco/: aruco_processor.cpp  aruco_processor.h  folder_analyzer.cpp
aruco_test_data_collection/: CMakeLists.txt  Makefile  Master_Test_data.csv  folder_analyzer.cpp  test_data_collection.cpp  timeData_1.csv
calibrate/: Makefile  calibrate.cpp  charuco_calibrate.cpp  fun.cpp
calibrations/: cam_mats_left.npy  dist_coefs_left.npy  dist_coefs_right.npy  e_mat.npy  rect_trans_left.npy  rectification_map_left.npy  rectification_map_right.npy  rot_mat.npy  trans_vec.npy  undistortion_map_left.npy  undistortion_map_right.npy  valid_boxes_left.npy
cpp/: Makefile  aruco_processor.cpp  aruco_processor.h  basic.cpp  configuration.h  target_finder.cpp  target_finder.h  target_processor.cpp  target_processor.h  test_data_collection.cpp  undistort_image.cpp  undistort_image.h
data/calibration/: jul_12_2018_1280x960.yml
data/realsense_calibration/: realsense_cam_1.yml
data/realsense_calibration/cam1/: cam1_calib_file.yml
data/realsense_calibration/cam2/: cam2_calib_file.yml
ground_component/: CMakeLists.txt  ground_component.py  mavlink_handler.py  requirements.txt
latencyTest/: Makefile  configuration.h  latencyTest.cpp
libs/: CMakeLists.txt
libs/argparse/: CMakeLists.txt  argparse.hpp
libs/aruco/lib/pkgconfig/: aruco-uninstalled.pc  aruco.pc
libs/aruco/share/aruco/: arucoConfig.cmake
libs/aruco_processor/: .gitignore  CMakeLists.txt
libs/aruco_processor/include/aruco_processor/: aruco_dual_image_processor.h  aruco_position.h  aruco_processor.h  undistort_image.h
libs/aruco_processor/src/: aruco_dual_image_processor.cpp  aruco_position.cpp  aruco_processor.cpp  undistort_image.cpp
libs/camera_realsense/: CMakeLists.txt
libs/camera_realsense/include/: camera_realsense.h
libs/camera_realsense/src/: camera_realsense.cpp
libs/common/: CMakeLists.txt
libs/common/common/: aruco_processor.cpp  aruco_processor.h  configuration.h  cvm_argument_parser.cpp  cvm_argument_parser.hpp  location_processor.hpp  navigational_state.hpp  position.cpp  position.hpp  undistort_image.cpp  undistort_image.h
libs/mavlink-server/: mavlink-server.cpp  mavlink-server.h
old data/: Output.csv  cameracalibrationparameters.json  inlineData.csv  onepfivem_in_x.csv
old data/StereoVisionLib/: blockmatchers.py  stereo_cameras.py  ui_utils.py
old data/calibrations/: cam_mats_right.npy  f_mat.npy  proj_mats_left.npy  proj_mats_right.npy  rect_trans_right.npy  valid_boxes_right.npy
python/: calibrate.py  calibration.p  camParams.h  camera_capture.py  contour_utils.py  imagingSourceCamViewer.py  plane_finder.py  point_utils.py  threshold_test.py
simulated_target_system/: CMakeLists.txt  main.cpp
src/: Makefile  configuration.h  cvm_argument_parser.cpp  cvm_argument_parser.hpp  location_processor.cpp  location_processor.hpp  main.cpp  msg_queue.hpp  navigational_state.cpp  navigational_state.hpp  position.cpp  position.hpp
src/aruco/: Makefile  aruco_configuration.h  aruco_processor.cpp  aruco_processor.h  folder_analyzer.cpp  test_data_collection.cpp
src/aruco/python/: camera_capture.py  threshold_test.py
src/aruco/python/1280x960 calib data/: calibration.p  camParams.h
src/aruco/python/2592x1944 calib data/: calibration.p  camParams.h
src/aruco/python/640x480 calib data/: calibration.p
src/aruco_test_data_collection/: Makefile  folder_analyzer.cpp  test_data_collection.cpp  timeData.csv
src/calibrate/: 1280x960.yml  Makefile  aruco_calibration  calibrate  calibrate.cpp  new_data.yml
src/calibrate/imgsrc_calib/: imgsrc.yml
src/common/: aruco_processor.cpp  aruco_processor.h  cvm_argument_parser.cpp  cvm_argument_parser.hpp  location_processor.cpp  location_processor.hpp  navigational_state.cpp  navigational_state.hpp  position.cpp  position.hpp  undistort_image.cpp  undistort_image.h
src/mavlink_control/: autopilot_interface.cpp  autopilot_interface.h  makefile  mavlink_control.cpp  mavlink_control.h
src/uav_sensor_deploy/: Makefile  configuration.h  main.cpp  states.hpp
tuner/: tcp_interface.py  tuner.py
uav_sensor_deploy/: CMakeLists.txt  Makefile  main.cpp  states.hpp
